@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2010-7-29
+GNU C Library NEWS -- history of user-visible changes.  2010-8-9
 Copyright (C) 1992-2009, 2010 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -9,7 +9,7 @@ Version 2.13
 
 * The following bugs are resolved with this release:
 
-  11640, 11701, 11840, 11856
+  11640, 11701, 11840, 11856, 11883
 
 * POWER7 optimizations: memset, memcmp, strncmp
 
